Fix top menu, display block only on mobile

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -71,6 +71,9 @@ h6 {
   line-height: 1.1;
 }
 
+.hr-links {
+  a { display: inline-block; }
+}
 //--  links
 a {
   color: $color__dark-green;
@@ -245,8 +248,6 @@ ul {
   .header-about {
     padding-bottom: 3rem;
     display: none;
-
-    a { display: inline-block; }
   }
 }
 
